tests/nightly/function/compile_fail/precondition_missing.stderr
error[E0308]: mismatched types
 --> $DIR/precondition_missing.rs:9:5
  |
9 |     #[assure("is bar", reason = "foo is bar")]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected a tuple with 2 elements, found one with 1 element
  |
  = note: expected tuple `(pre::CustomCondition<"is bar">, pre::CustomCondition<"is baz">)`
             found tuple `(pre::CustomCondition<"is bar">,)`
